fix some spacing issue

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -30,7 +30,7 @@ $medium-spacing: 1.5rem;
 $double-spacing: 2rem;
 
 //max width for <main>
-$main-max-width: 1920px;
+$main-max-width: 1600px;
 
 //media query breakpoints
 $breakpoint-mobile: 576px;
