--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -9,7 +9,7 @@ header {
   .top-bar {
     @include flex-layout-row-between;
     padding: $base-spacing;
-    max-width: 2200px;
+    max-width: 1800px;
     margin: 0 auto;
 
     a.site-logo {
