--- a/src/scss/components/_movie-card.scss
+++ b/src/scss/components/_movie-card.scss
@@ -52,11 +52,11 @@
     right: 0;
     height: 100%;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0.75);
     text-align: center;
     overflow: hidden;
     opacity: 0;
-    transition: all 0.4s;
+    transition: all 0.2s;
 
     p {
       font-size: 0.8rem;
@@ -80,7 +80,8 @@
     }
 
     a {
-      padding: 0.3rem 0.5rem;
+      margin-top: 0.3rem;
+      padding: 0.2rem 0.5rem;
       background-color: $site-blue;
       border-radius: 6px;
       font-weight: 600;
