--- a/src/scss/components/_movies-grid.scss
+++ b/src/scss/components/_movies-grid.scss
@@ -7,12 +7,12 @@
 
     @media (min-width: 500px) {
         grid-template-columns: repeat(2, 1fr);
-        gap: $base-spacing;
+        gap: 0.65rem;
     }
 
     @media (min-width: $breakpoint-tablet) {
         grid-template-columns: repeat(3, 1fr);
-        gap: $medium-spacing;
+        gap: $base-spacing;
     }
 
     @media (min-width: $breakpoint-desktop) {
